--- a/styles/styles.css
+++ b/styles/styles.css
@@ -168,9 +168,10 @@ p {
   color: var(--textColor);
 }
 .body--section, .body--section_error, .body--section_footer, .body--section_contact_hidden, .body--section_contact, .body--section_portfolio, .body--section_about-me, .body--section_header {
+  display: flex;
+  flex-direction: column;
   padding-left: var(--padding-body);
   padding-right: var(--padding-body);
-  display: flex;
   margin-bottom: var(--padding-body);
   gap: 2rem;
 }
@@ -186,38 +187,36 @@ p {
   border-bottom: 1px solid var(--textColor);
 }
 .body--section_about-me {
-  flex-direction: column;
   height: fit-content;
   min-height: 100vh;
 }
 .body--section_portfolio {
-  flex-direction: column;
   position: relative;
   align-items: center;
   padding: 0;
 }
 .body--section_contact {
-  flex-direction: column;
   padding-top: 2.5rem;
   border-top: 1px solid var(--textColor);
   opacity: 1;
   transform: translateY(0px);
-  transition: all 400ms ease-in-out;
+  transition: transform, opacity 400ms ease-in-out;
 }
 .body--section_contact_hidden {
-  flex-direction: column;
   padding-top: 2.5rem;
   border-top: 1px solid var(--textColor);
   opacity: 0;
   transform: translateY(var(--padding-body));
 }
 .body--section_footer {
+  flex-direction: row;
   justify-content: space-between;
   align-items: baseline;
+  margin-top: var(--padding-body);
+  margin-bottom: calc(var(--padding-body) / 2);
 }
 .body--section_error {
   gap: 2.5rem;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -256,7 +255,6 @@ p {
 .section--container_row {
   display: flex;
   gap: 1rem;
-  flex-wrap: wrap;
 }
 .section--container_row_space-between {
   display: flex;
@@ -289,6 +287,7 @@ p {
   height: fit-content;
   border-radius: 100px;
   overflow: visible;
+  margin-right: var(--padding-body);
 }
 .section--avatar img {
   width: 250px;
@@ -318,6 +317,7 @@ p {
 }
 .section--paragraph {
   font-size: 1rem;
+  opacity: 0.8;
 }
 .section--paragraph_centered {
   align-self: center;
@@ -345,7 +345,7 @@ p {
   opacity: 0.8;
 }
 .section--link:focus, .section--link_with-icon_lg:focus, .section--link_with-icon:focus {
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.0001) 50%, var(--textColor-20) 50%);
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.0001) 60%, var(--textColor-20) 60%);
 }
 .section--link:focus-visible, .section--link_with-icon_lg:focus-visible, .section--link_with-icon:focus-visible {
   outline: 2px solid var(--textColor);
@@ -578,7 +578,7 @@ p {
 .portfolio-item--image, .portfolio-item--image_hero {
   width: 100%;
   height: auto;
-  opacity: 0.8;
+  opacity: 0.9;
   object-fit: cover;
 }
 .figure {
