Cleaned up formatting

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -25,7 +25,7 @@
    @include spread-map($theme-map-dark);
 }
 
-// Variables
+// Root
 :root {
    color-scheme: light dark;
    @include spread-map($theme-map-desktop);
@@ -128,6 +128,18 @@
    }
 }
 
+@keyframes fade-in-right {
+   from {
+      transform: translateX(100px);
+      opacity: 0;
+   }
+
+   to {
+      transform: translateX(0px);
+      opacity: 1;
+   }
+}
+
 @keyframes slide-down {
    from {
       transform: translateY(-150px);
@@ -140,13 +152,13 @@
    }
 }
 
-html {
-   scroll-behavior: smooth;
-}
-
 //Elements
 * {
    box-sizing: border-box;
+}
+
+html {
+   scroll-behavior: smooth;
 }
 
 h1,
@@ -495,40 +507,6 @@ p {
    }
 }
 
-.toggle-button {
-   color: var(--backgroundColor);
-   background-color: var(--textColor);
-   border: none;
-   width: calc(var(--font-size-l) + 1.5rem);
-   height: calc(var(--font-size-l) + 1.5rem);
-   border-radius: calc((var(--font-size-l) + 1.5rem) / 2);
-   z-index: 3;
-   flex-shrink: 0;
-
-   span {
-      margin: 0;
-      padding: 0;
-      font-size: var(--font-size-l);
-   }
-
-   &:focus {
-      outline: 2px solid var(--textColor);
-      outline-offset: 3px;
-   }
-}
-
-@keyframes fade-in-right {
-   from {
-      transform: translateX(100px);
-      opacity: 0;
-   }
-
-   to {
-      transform: translateX(0px);
-      opacity: 1;
-   }
-}
-
 .portfolio-item {
    &--header {
       display: flex;
@@ -710,5 +688,27 @@ p {
    &--video {
       width: 100%;
       height: 600px;
+   }
+}
+
+.toggle-button {
+   color: var(--backgroundColor);
+   background-color: var(--textColor);
+   border: none;
+   width: calc(var(--font-size-l) + 1.5rem);
+   height: calc(var(--font-size-l) + 1.5rem);
+   border-radius: calc((var(--font-size-l) + 1.5rem) / 2);
+   z-index: 3;
+   flex-shrink: 0;
+
+   span {
+      margin: 0;
+      padding: 0;
+      font-size: var(--font-size-l);
+   }
+
+   &:focus {
+      outline: 2px solid var(--textColor);
+      outline-offset: 3px;
    }
 }
